<resources>
    <string name="app_name">수공 - 마스터용</string>
    <string name="new_badge_text">N</string>
    <string name="at_text">\@</string>
    <string name="special_symbol_stroke">-</string>
    <string name="kilo_meters">km</string>
    <string name="kilo_meters_digit">%d km</string>
    <string name="years">%d년</string>
    <string name="years_comma">%d년, %s</string>
    <string name="percent">%d%%</string>
    <string name="version_text">v%s</string>
    <string name="divide_by">0 / %d</string>
    <string name="over_one_thousand">+999</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="from">부터</string>
    <string name="up_to">까지</string>
    <string name="summary_label_for_before_progress">진행 전</string>
    <string name="summary_label_for_progressing">진행 중</string>
    <string name="summary_label_for_after_process">완료</string>
    <string name="cancellation">취소</string>
    <string name="addition">추가하기</string>
    <string name="deletion">삭제</string>
    <string name="editing">수정</string>
    <string name="applying">적용</string>
    <string name="retyping">재입력</string>
    <string name="requirement">필수</string>
    <string name="option">선택</string>
    <string name="vat_included">부가세 포함</string>
    <string name="vat_not_included">부가세 미포함</string>
    <string name="save">저장하기</string>
    <string name="modify">수정하기</string>
    <string name="edit">편집하기</string>
    <string name="delete">삭제하기</string>
    <string name="register">등록하기</string>
    <string name="certify">인증하기</string>
    <string name="timer_form">%1$d:%2$d</string>
    <string name="selecting_done">선택완료</string>
    <string name="possible">가능</string>
    <string name="impossible">불가능</string>
    <string name="required_field_alert">필수 정보입니다.</string>
    <string name="fill_text_over_10">10자 이상으로 입력해주세요.</string>
    <string name="fill_text_under_10">10자 이하로 입력해주세요.</string>
    <string name="too_large_number">숫자가 너무 큽니다.</string>
    <string name="minimum_cost">1만원 이상으로 보내주세요.</string>
    <string name="required_value_between_2_and_20">2자 이상 20자 이내로 입력해주세요.</string>
    <string name="certification_code">인증번호</string>
    <string name="certification">인증</string>
    <string name="check_certification_code_button_text">인증완료</string>
    <string name="alert_empty_certification_code">인증번호를 입력해주세요.</string>
    <string name="confirming_certification_code_received">인증번호를 받지 못하셨나요?</string>
    <string name="request_certification_code_text">인증번호 요청</string>
    <string name="resend_certification_code"><u>재요청하기</u></string>
    <string name="expired_certification_code">인증시간이 초과되었습니다. 인증번호를 재요청해주세요.</string>
    <string name="invalid_phone_number">휴대폰번호 형식이 올바르지 않습니다.</string>
    <string name="wrong_certification_code">인증번호가 틀립니다.</string>
    <string name="invalid_certification_code">6자리 숫자로 입력해주세요.</string>
    <string name="invalid_credential">인증에 실패했습니다. 다시 시도해주세요.</string>
    <string name="sign_up_introduction">수공마스터 서비스를 이용하기 위해\n회원가입 및 로그인이 필요합니다</string>
    <string name="sign_up">회원가입</string>
    <string name="retype_phone_number_button_text">휴대폰번호 재입력</string>
    <string name="alert_unknown_user">가입되지 않은 번호입니다.</string>
    <string name="alert_invalid_certification_code">6자리 숫자로 입력해주세요.</string>
    <string name="alert_privacy_policy_agreement_required">이용약관 및 개인정보 처리방침에 동의해주세요. </string>
    <string name="sign_up_over">회원가입 완료</string>
    <string name="type_owner_name">대표자명을 입력해주세요.</string>
    <string name="select_service_area">서비스 가능 범위를 선택해주세요.</string>
    <string name="asking_repair_in_person">수공은 직접 시공하는 마스터님만을 위한 서비스입니다. 직접 시공하시나요?</string>
    <string name="do_repair_in_person">직접 시공합니다.</string>
    <string name="notice_for_repair_in_person">직접 시공이란? 하청이 아닌 본인 또는 소속 직원이 직접 고객님들에게 서비스를 제공하는 것입니다. 하청으로 인해 발생하는 문제는 수공이 책임지지 않습니다.</string>
    <string name="agreement_introduction">수공 마스터 앱 서비스 이용 약관에 동의하고 수공과 함께해 주세요!</string>
    <string name="agreement_all">모두 동의합니다. (선택 정보 포함)</string>
    <string name="agreement_privacy_policy">수공의 이용약관 및 개인정보 처리방침에 동의합니다.</string>
    <string name="agreement_marketing_push">마케팅 수신에 동의합니다. (선택)</string>
    <string name="terms_of_service">이용약관</string>
    <string name="private_policy">개인정보 처리방침</string>
    <string name="sign_in">로그인</string>
    <string name="insert_certification_code_edittext_hint">인증번호 6자리 입력</string>
    <string name="notice">공지사항</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="logout">로그아웃</string>
    <string name="app_version">앱 버전</string>
    <string name="customer_service">고객센터</string>
    <string name="empty_notice">등록된 공지사항이 없습니다.</string>
    <string name="my_page_notice_total">전체보기</string>
    <string name="my_page_call_text">전화 문의하기</string>
    <string name="my_page_kakao_text">카카오톡 문의하기</string>
    <string name="my_page_time_notice">연락가능 시간 : 오전 10:00 ~ 오후 7:00 \n (주말, 공휴일 휴무)</string>
    <string name="account_page_name">계정설정</string>
    <string name="customer_service_introduction">고객센터 운영 안내</string>
    <string name="customer_service_time_on">∙ 평일 10:00 – 19:00 (점심시간 13:00 – 14:00)</string>
    <string name="customer_service_time_off">∙ 토, 일/공휴일 휴무</string>
    <string name="asking_via_phone">전화 문의하기</string>
    <string name="asking_via_kakao_talk">카카오톡 문의하기</string>
    <string name="label_for_marketing_push">마케팅 푸시 알림</string>
    <string name="label_for_push_at_night">야간 푸시 알림</string>
    <string name="subtitle_for_push_at_night">오후 9시 ~ 오전 7시까지</string>
    <string name="introduction_alarm_text">견적문의 등 의무적으로 안내되어야 하는 정보성 내용 및 일부 혜택성 정보는 수신동의 여부와 무관하게 제공합니다.</string>
    <string name="main_activity_navigation_bar_home">홈</string>
    <string name="main_activity_navigation_bar_requirements">문의 목록</string>
    <string name="main_activity_navigation_bar_profile">내 프로필</string>
    <string name="main_activity_navigation_bar_preferences">설정</string>
    <string name="label_for_switch_compat">실측 요청 받기</string>
    <string name="summary_item">%s건</string>
    <string name="new_requirements_container">새로 들어온 문의</string>
    <string name="requirement_before_progress_tab">진행 전</string>
    <string name="requirement_in_progress_tab">진행 중</string>
    <string name="requirements_done_tab_name">완료·취소</string>
    <string name="alert_text_to_fill_up_required_information"><b>필수 정보를 모두 등록</b>하고, 승인이 완료되면\n<b>문의 처리가 가능</b>합니다!</string>
    <string name="tab_name_for_whole">전체</string>
    <string name="tab_name_for_requested">견적요청</string>
    <string name="tab_name_for_measuring">실측</string>
    <string name="tab_name_for_consulting">상세상담</string>
    <string name="tab_name_for_estimated">매칭대기</string>
    <string name="tab_name_for_repairing">시공예정</string>
    <string name="tab_name_for_done">시공완료</string>
    <string name="requirements_empty">문의가 없습니다.</string>
    <string name="requirements_not_found">해당 내용을 찾지 못 하였습니다.</string>
    <string name="search_bar_hint_text">프로젝트 또는 주소</string>
    <string name="estimation_template">자주 쓰는 제안</string>
    <string name="estimation_templates_not_found">자주 쓰는 제안 내용이 없습니다.</string>
    <string name="bottom_dialog_estimation_template_title">마스터님의 제안 내용</string>
    <string name="requirements_card_waiting_label">2주 내 고객의 응답이 없을 시 해당 문의건은 삭제됩니다.</string>
    <string name="requirements_card_review_button">리뷰 요청하기</string>
    <string name="requirements_card_review_button_done">리뷰 요청을 완료했어요!</string>
    <string name="requirements_card_due_date">견적 마감일 : </string>
    <string name="requirements_card_estimation_due_time">견적 마감시간 %s</string>
    <string name="requirements_card_request_measure_due_time">응답 마감시간 %s</string>
    <string name="requirements_card_done_date">시공 완료일 : </string>
    <string name="requirements_card_view_detail">자세히 보기</string>
    <string name="requirements_card_amount_title">나의 견적가 :</string>
    <string name="requirements_card_amount_done_title">최종 시공가 :</string>
    <string name="requirements_card_due_date_alert">마감일이 지나면 해당 문의가 삭제됩니다.</string>
    <string name="requirements_card_due_time_alert">마감시간이 지나면 해당 문의가 삭제됩니다.</string>
    <string name="not_estimated_text">견적 미발송</string>
    <string name="measurement_text">현장실측</string>
    <string name="view_requirement_action_title">받은 문의</string>
    <string name="requirement_basic_requirement_token">문의번호 %s</string>
    <string name="view_requirement_customer_request_label">📄 고객님 요청 내용</string>
    <string name="view_requirement_my_estimation_label">💬 나의 제안 내용</string>
    <string name="view_requirement_my_measurement_label">💬 나의 실측 내용</string>
    <string name="view_requirement_previous_estimation_label">🗂 부가 정보</string>
    <string name="view_requirement_my_repair_label">🛠 나의 최종 시공 내용</string>
    <string name="view_requirement_canceled_reason_label">🚫 시공 취소 사유</string>
    <string name="view_requirement_customer_review_label">📝 고객리뷰 내용</string>
    <string name="view_requirement_images_label">사진이 있다면 견적에 도움이 됩니다.</string>
    <string name="view_requirement_description">정확한 견적을 위해 마스터에게 더 설명드릴 사항이 있나요?</string>
    <string name="view_requirement_estimation_images_label">견적 관련 사진</string>
    <string name="estimation_total_cost">총 견적가</string>
    <string name="estimation_labor_cost">인건비</string>
    <string name="estimation_travel_cost">출장비</string>
    <string name="estimation_material_cost">자재비</string>
    <string name="description_label">세부내용</string>
    <string name="estimation_description_label">제안내용</string>
    <string name="repair_actual_price">최종 시공가</string>
    <string name="canceled_reason">취소 사유</string>
    <string name="subtitle_of_previous_estimation">이전에 다른 마스터님에게 상담 또는 실측을 받았던 견적입니다.</string>
    <string name="canceled_reason_of_client">추가 요청 사유</string>
    <string name="price_of_previous_estimation">다른 마스터님의 견적가</string>
    <string name="description_of_previous_estimation">다른 마스터님의 코멘트</string>
    <string name="measure_attachment_label">실측 사진</string>
    <string name="write_estimation">견적 보내기</string>
    <string name="refuse_estimation">견적 거절</string>
    <string name="accept_measure">실측 수락</string>
    <string name="refuse_measure">실측 거절</string>
    <string name="cancel_measure">실측 취소</string>
    <string name="send_measure">실측 입력</string>
    <string name="request_review">리뷰 요청</string>
    <string name="request_review_done">리뷰 요청 완료</string>
    <string name="cancel_requirement_text"><u>취소하기</u></string>
    <string name="repair_done_text">시공 완료</string>
    <string name="cancel_repair">시공 취소</string>
    <string name="call_to_customer">전화연결</string>
    <string name="requirement_intro_title_of_requested">견적요청이 왔습니다.</string>
    <string name="requirement_intro_subtitle_of_requested">견적에 대한 의사표현을 해주세요.\n<font color="#2E2E2E">미응답 시 추후 요청에 제한</font>이 있을 수 있습니다.</string>
    <string name="requirement_intro_title_of_request_consult">상세상담 요청이 왔습니다.</string>
    <string name="requirement_intro_subtitle_of_request_consult">견적에 대한 상세상담을 해주세요.\n<font color="#2E2E2E">미응답 시 추후 요청에 제한</font>이 있을 수 있습니다.</string>
    <string name="requirement_intro_title_of_estimated">견적서를 전달했습니다.\n고객의 선택을 기다려주세요.</string>
    <string name="requirement_intro_subtitle_of_estimated">2주 내 고객 미응답 시 해당 문의가 삭제됩니다.</string>
    <string name="requirement_intro_title_of_request_measure">현장 실측 요청이 왔습니다.</string>
    <string name="requirement_intro_title_of_repairing_from_funnel">고객의 선택을 받았습니다!\n시공일정을 잡아주세요.</string>
    <string name="requirement_intro_title_of_repairing_from_secretary">%s\n시공 예정입니다.</string>
    <string name="requirement_intro_subtitle_of_repairing">시공 완료 시 시공 완료버튼을 눌러\n최종 정보를 입력해주세요.\n<b><font color="#2E2E2E">미입력 시 배정에 불이익</font></b>이 있을 수 있습니다.</string>
    <string name="requirement_intro_title_of_request_finish">시공 완료 요청이 왔습니다.\n완료 처리를 해주세요.</string>
    <string name="end_estimate_calendar_title">시공 완료일자</string>
    <string name="type_phone_number">연락이 가능한 휴대폰번호를 입력해주세요.</string>
    <string name="type_phone_number_hint">휴대폰 번호 숫자만 입력</string>
    <string name="writing_done">작성 완료</string>
</resources>