<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="kr.co.soogong.master.presentation.ui.auth.signup.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subheadline"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:breakStrategy="simple"
            android:text="@string/agreement_introduction"
            android:textAppearance="@style/subheadline.bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_agreement_all"
            style="@style/check_box_rectangle"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_8"
            android:checked="@{vm.privacyPolicy &amp;&amp; vm.marketingPush}"
            android:text="@string/agreement_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subheadline" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_line"
            android:layout_width="@dimen/gap_0"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/gap_16"
            android:background="@color/light_grey_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_agreement_all" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_agreement_privacy_policy"
            style="@style/check_box_rectangle"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_16"
            android:checked="@={vm.privacyPolicy}"
            android:text="@string/agreement_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_alert"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:text="@string/required_field_alert"
            android:textAppearance="@style/caption_1.regular"
            android:textColor="@color/brand_red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_agreement_privacy_policy"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_agreement_marketing_push"
            style="@style/check_box_rectangle"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_8"
            android:checked="@={vm.marketingPush}"
            android:text="@string/agreement_marketing_push"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alert" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>