<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="kr.co.soogong.master.presentation.ui.auth.AuthContainerViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/gap_16"
        android:paddingTop="@dimen/gap_24"
        android:paddingEnd="@dimen/gap_16"
        android:paddingBottom="@dimen/gap_24">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bolty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bolty"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_12"
            android:background="@drawable/ic_main_logo"
            android:backgroundTint="@color/light_grey_2"
            app:layout_constraintBottom_toTopOf="@id/tv_introduction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_bolty"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_20"
            android:text="@string/sign_up_introduction"
            android:textAppearance="@style/footnote.regular"
            android:textColor="@color/grey_3"
            app:layout_constraintBottom_toTopOf="@id/gl_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/gap_56" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_sign_in"
            style="@style/button.medium.primary"
            android:layout_marginStart="@dimen/gap_8"
            android:onClick="@{() -> vm.moveToSignIn()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_sign_up"
            app:layout_goneMarginStart="@dimen/gap_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_sign_up"
            style="@style/button.medium.outlined_primary"
            android:onClick="@{() -> vm.moveToSignUp()}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/b_sign_in"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>