<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="authPhoneNumberButtonTheme"
            type="kr.co.soogong.master.domain.entity.common.ButtonTheme" />

        <variable
            name="vm"
            type="kr.co.soogong.master.presentation.ui.profile.detail.phonenumber.EditPhoneNumberViewModel" />

        <variable
            name="authVm"
            type="kr.co.soogong.master.presentation.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_instruction"
            android:textAppearance="@style/subheadline.bold"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/type_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            style="@style/outlinedTextInputLayout"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_26"
            android:enabled="@{authVm.phoneNumberInputEnable}"
            app:layout_constraintEnd_toStartOf="@id/b_request_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="4"
            android:hint="@string/type_phone_number_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction"
            app:endIconMode="clear_text"
            app:endIconTint="@color/light_grey_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/gap_14"
                android:inputType="phone"
                android:singleLine="true"
                android:text="@={authVm.tel}"
                android:maxLines="1"
                android:maxLength="11"
                android:textColor="@color/black"
                tools:text="내용" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_request_code"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            style="@style/button.medium.primary"
            android:text="@{authVm.phoneNumberInputEnable ? @string/requesting : @string/retyping}"
            android:layout_marginStart="@dimen/gap_8"
            android:layout_marginTop="@dimen/gap_32"
            android:onClick="@{() -> authVm.requestButtonClick()}"
            tools:text="@string/requesting"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/til_phone_number"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_code"
            style="@style/outlinedTextInputLayout"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_4"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/certification_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone_number"
            app:endIconMode="clear_text"
            app:endIconTint="@color/light_grey_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/gap_14"
                android:singleLine="true"
                android:maxLines="1"
                android:text="@={authVm.certificationCode}"
                android:maxLength="6"
                android:inputType="number"
                android:textColor="@color/black"
                tools:text="내용" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_resend_certification_code"
            android:textAppearance="@style/caption_1.regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_5"
            android:paddingStart="@dimen/gap_10"
            android:paddingTop="@dimen/gap_10"
            android:paddingEnd="@dimen/gap_10"
            android:paddingBottom="@dimen/gap_10"
            android:text="@string/resend_certification_code"
            android:textColor="@color/grey_3"
            android:onClick="@{() -> authVm.requestAgainButtonClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_code"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>