<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="vm"
            type="kr.co.soogong.master.presentation.ui.requirement.action.end.EndRepairViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <kr.co.soogong.master.presentation.atomic.molecules.ActionBar
            android:id="@+id/ab_header"
            android:layout_width="@dimen/gap_0"
            android:layout_height="wrap_content"
            app:backButtonVisibility="@{true}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/end_repair_title}" />

        <ScrollView
            android:layout_width="@dimen/gap_0"
            android:layout_height="@dimen/gap_0"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/iv_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ab_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/gap_16"
                android:paddingBottom="@dimen/gap_16">

                <kr.co.soogong.master.presentation.atomic.molecules.SubheadlineTextInput
                    android:id="@+id/sti_actual_price"
                    android:layout_width="@dimen/gap_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/gap_16"
                    android:layout_marginEnd="@dimen/gap_16"
                    app:contentLong="@={vm.actualPrice}"
                    app:inputType="@{InputType.TYPE_CLASS_NUMBER}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:max="@{10}"
                    app:moneyFormatAtHelper="@{vm.actualPrice}"
                    app:subheadline="@{@string/repair_actual_price}" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_including_vat"
                    style="@style/check_box_rectangle"
                    android:layout_width="@dimen/gap_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/gap_16"
                    android:layout_marginEnd="@dimen/gap_16"
                    android:checked="@={vm.includingVat}"
                    android:text="@string/vat_included"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sti_actual_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_calendar"
                    android:layout_width="@dimen/gap_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/gap_16"
                    android:layout_marginTop="@dimen/gap_32"
                    android:layout_marginEnd="@dimen/gap_16"
                    android:text="@string/end_estimate_calendar_title"
                    android:textAppearance="@style/subheadline.bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_including_vat" />

                <CalendarView
                    android:id="@+id/cv_calender"
                    android:layout_width="@dimen/gap_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gap_8"
                    android:theme="@style/CalenderViewCustom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_calendar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_button_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gap_64"
            android:background="@color/white"
            android:elevation="@dimen/gap_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_end_repair"
            style="@style/button.big.primary"
            android:layout_marginStart="@dimen/gap_16"
            android:layout_marginEnd="@dimen/gap_16"
            android:elevation="@dimen/gap_10"
            android:text="@string/writing_done"
            app:layout_constraintBottom_toBottomOf="@id/iv_button_container"
            app:layout_constraintEnd_toEndOf="@id/iv_button_container"
            app:layout_constraintStart_toStartOf="@id/iv_button_container"
            app:layout_constraintTop_toTopOf="@id/iv_button_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>